Fix a dark mode issue and further optimize bg image

--- a/landing-styleshit.css
+++ b/landing-styleshit.css
@@ -1,10 +1,12 @@
 /*
 ThatStella7922 Landing Website Stylesheet
- 
-v2023.0409.0
+
+mreowww :3
+
+v2023.0409.2
 */
 
-/* small css reset and set a font so my eyes dont die */
+/* small css reset because something was causing issues and im too dumb to figure out what it was */
 body {
     margin: 0px 0px 0px 0px;
 }
@@ -35,6 +37,7 @@ end of safe area handling for notched iphones */
 /* Styling for all device sizes */
 body {
     font-family: "Hind", sans-serif;
+    color: #ffffff;
 }
 
 a {
@@ -117,6 +120,7 @@ a {
 
 footer {
     text-align: center;
+    color: #000000;
 }
 
 /* Twemoji sizing */
@@ -178,6 +182,10 @@ img.emoji {
     body {
         background-color: #1a1a1a;
         color:#FFFFFF;
+    }
+
+    footer {
+        color: #ffffff;
     }
 
     /* Make the image darker */
